// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DiscoveryServices /> tests should match snapshot 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
  >
    <div
      class="StyledProps--font StyledProps--main PageBody--pageBody"
      data-name="page-body"
      data-testid="page-body"
    >
      <div
        class="StyledProps--font StyledProps--main tableBody"
      >
        <div
          class="TableV2--table"
        >
          <div
            class="TableV2--header"
            role="row"
          >
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 20%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                common.serviceName
              </p>
            </div>
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 20%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                common.namespace
              </p>
            </div>
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 20%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                discovery.networkDetails
              </p>
            </div>
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 30%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                discovery.relatedService
              </p>
            </div>
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 150px;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                
              </p>
            </div>
          </div>
          <div
            class="TableV2--body"
          >
            <div
              class="TableV2--row TableV2--card"
              role="row"
            >
              <div
                class="TableV2--cells"
              >
                <div
                  class="TableV2--cell"
                  role="cell"
                  style="width: 20%;"
                >
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-size-normal StyledProps--font-weight-semi-bold StyledProps--margin-left-medium StyledProps--color StyledProps--color-primary7"
                    style="cursor: pointer; width: 200px; --text-line-clamp: 1;"
                  >
                    access-control
                  </p>
                </div>
                <div
                  class="TableV2--cell"
                  role="cell"
                  style="width: 20%;"
                >
                  <div
                    class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-flex-start StyledProps--flex-alignItems-center"
                  >
                    <span
                      class="bp3-icon StyledProps--main StyledProps--margin-right-small"
                      data-icon="app-kubernetes"
                    >
                      <svg
                        height="24"
                        viewBox="0 0 32 30"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g
                          fill="none"
                        >
                          <path
                            d="M15.94.023c-.228 0-.457 0-.685.229L4.512 5.28c-.457.229-.915.686-1.143 1.372L.626 18.08c-.229.457 0 1.143.229 1.6l.228.229 7.314 9.143c.458.457.915.685 1.6.685h11.886c.686 0 1.143-.228 1.6-.685l7.314-9.143c.458-.457.458-1.143.458-1.6L28.512 6.88c-.229-.685-.457-1.143-1.143-1.371L16.626.48c0-.228-.457-.457-.686-.457z"
                            fill="#326ce5"
                          />
                          <path
                            d="M15.94 3.909c-.457 0-.685.228-.685.686v2.057c0 .228-.229.228-.229.228v.229c-.457 0-.686 0-1.143.228-1.6.458-3.2 1.143-4.114 2.286l-.229-.228h-.457c-.228-.23-.457-.458-.914-.686l-.457-.457h-.229c-.228 0-.228-.229-.457-.229s-.457 0-.457.229c-.229.228-.229.685.228.914h.23c.228.229.456.229.456.229.457.228.686.457.914.685 0 0 .23.229.23.457l.228.229c-1.143 1.6-1.6 3.657-1.372 5.714h-.228l-.229.229c-.229 0-.686.228-1.143.228H4.97c-.457 0-.686.458-.457.686 0 .229.457.457.914.457h.229c.228 0 .457-.228.685-.228.457-.229.686-.229 1.143-.229.229 0 .229 0 .457.229h.229c.686 2.057 2.057 3.657 3.657 4.571l-.229.229v.457c-.228.228-.228.686-.685 1.143-.229.228-.229.228-.229.457v.228c-.228.458 0 .686.229.915.228.228.685 0 .914-.457v-.23c0-.228.229-.456.229-.685.228-.457.228-.914.457-1.143 0 0 .228 0 .228-.228l.229-.229c1.371.457 3.2.686 4.8.457.457 0 .686-.228 1.143-.228l.228.228s.229 0 .229.229c.228.229.228.686.457 1.143 0 .228 0 .457.229.686v.228c.228.457.457.457.914.457.228-.228.457-.457.228-.914v-.229c0-.228-.228-.228-.228-.457-.229-.457-.457-.685-.457-.914v-.686c1.828-1.143 2.971-2.743 3.657-4.571h.228s.23-.229.458-.229.685.229 1.142.229c.23 0 .458.228.686.228h.229c.457 0 .685-.228.914-.457 0-.228-.229-.685-.457-.685h-.914c-.458 0-.915 0-1.143-.23-.229 0-.229-.228-.229-.228h-.228c.228-.914 0-2.057-.229-2.971s-.686-2.057-1.143-2.743l.229-.228c0-.23 0-.23.228-.458.229-.228.457-.457.915-.685.228 0 .457-.229.457-.229h.228c.229-.228.457-.686.229-.914-.229-.229-.686-.229-.914 0h-.229l-.457.457c-.229.229-.686.686-.914.686h-.458l-.228.228a8.778 8.778 0 00-5.257-2.514v-.229l-.229-.228V5.052c-.457-.686-.686-1.143-1.143-1.143zm-.685 5.028l-.229 3.429a.492.492 0 01-.457.457h-.229l-2.743-2.057c.915-.914 1.83-1.371 3.2-1.829zm1.6 0c1.371.229 2.742.915 3.885 1.829l-2.743 1.829c-.228.228-.685.228-.685 0l-.229-.23zm-6.4 3.2l2.514 2.286c.228.229.228.457 0 .686l-.229.228-3.2.915c-.228-1.6 0-2.972.915-4.115zm11.2 0c.457.686.685 1.372.914 2.058.228.685.228 1.37.228 2.057l-3.2-.915c-.228 0-.457-.457-.457-.685 0-.229 0-.229.229-.229zm-6.172 2.286h.914l.686.686-.228.914-.915.457-.914-.457-.229-.914zm3.2 2.743c.229 0 .229 0 0 0l3.429.457c-.457 1.372-1.372 2.514-2.743 3.429l-1.372-3.2c.23-.229.23-.457.686-.686zm-5.486 0c.23 0 .458.229.458.457v.457l-1.372 3.2c-1.143-.685-2.057-1.828-2.743-3.428zm2.743 1.371h.229l.228.229 1.6 2.971c-.228 0-.457.229-.685.229-1.143.229-2.515.229-3.657-.229l1.6-2.971c.457 0 .457-.229.685-.229z"
                            fill="#fff"
                            stroke="#fff"
                            stroke-width="0.25"
                          />
                        </g>
                      </svg>
                    </span>
                    <p
                      class="StyledProps--font StyledProps--main"
                    >
                      chaos-1000
                    </p>
                  </div>
                </div>
                <div
                  class="TableV2--cell"
                  role="cell"
                  style="width: 20%;"
                >
                  <div
                    class="Layout--vertical StyledProps--main"
                  >
                    <div
                      class="Layout--horizontal StyledProps--main"
                    >
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--color StyledProps--color-grey500"
                      >
                        ce.co.gatewayAccess.ip
                        :
                      </p>
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--padding-left-small StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-primary5"
                      >
                        10.104.11.160
                      </p>
                    </div>
                    <div
                      class="Layout--horizontal StyledProps--main"
                    >
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--color StyledProps--color-grey500"
                      >
                        discovery.discoveryDetails.discoveredService.portNumber
                        :
                      </p>
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--padding-left-small StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-primary5"
                      >
                        9006
                      </p>
                    </div>
                  </div>
                </div>
                <div
                  class="TableV2--cell"
                  role="cell"
                  style="width: 30%;"
                >
                  <div
                    class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
                  >
                    <div
                      class="Layout--horizontal StyledProps--main"
                    >
                      <div
                        class="tag"
                      >
                        <span
                          class="Tag--main"
                        >
                          <span
                            class="bp3-tag bp3-intent-primary"
                          >
                            <span
                              class="bp3-text-overflow-ellipsis bp3-fill"
                            >
                              harness-manager
                            </span>
                          </span>
                        </span>
                      </div>
                      <div
                        class="tag"
                      >
                        <span
                          class="Tag--main"
                        >
                          <span
                            class="bp3-tag bp3-intent-primary"
                          >
                            <span
                              class="bp3-text-overflow-ellipsis bp3-fill"
                            >
                              redis-sentinel-harness-announce-0
                            </span>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="TableV2--cell"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-flex-end"
                  >
                    <span
                      class="bp3-popover-wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          aria-label="discovery.createNetworkMap"
                          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="bp3-icon bp3-icon-plus StyledProps--main"
                            icon="plus"
                          >
                            <svg
                              data-icon="plus"
                              height="16"
                              viewBox="0 0 16 16"
                              width="16"
                            >
                              <desc>
                                plus
                              </desc>
                              <path
                                d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Layout--horizontal StyledProps--main TableV2--pagination Pagination--container StyledProps--padding-top-medium StyledProps--padding-bottom-medium StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-distribution-space-between"
          >
            <span
              class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--font-variation-small-semi"
            >
              0
               of 
              0
            </span>
            <div
              class="Layout--horizontal StyledProps--main"
            >
              <button
                aria-label="Prev"
                class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Pagination--roundedButton Pagination--buttonLeft Button--with-current-color Button--withLeftIcon Button--size Button--small"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-arrow-left StyledProps--main StyledProps--padding-right-xsmall"
                  icon="arrow-left"
                >
                  <svg
                    data-icon="arrow-left"
                    height="12"
                    viewBox="0 0 16 16"
                    width="12"
                  >
                    <desc>
                      arrow-left
                    </desc>
                    <path
                      d="M13.99 6.99H4.41L7.7 3.7a1.003 1.003 0 00-1.42-1.42l-5 5a1.014 1.014 0 000 1.42l5 5a1.003 1.003 0 001.42-1.42L4.41 8.99H14c.55 0 1-.45 1-1s-.46-1-1.01-1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="bp3-button-text"
                >
                  Prev
                </span>
              </button>
              <button
                class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Pagination--roundedButton Pagination--selected Button--with-current-color"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  1
                </span>
              </button>
              <button
                aria-label="Next"
                class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Pagination--roundedButton Pagination--buttonRight Button--with-current-color Button--withRightIcon Button--size Button--small"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  Next
                </span>
                <span
                  class="bp3-icon bp3-icon-arrow-right StyledProps--main"
                  icon="arrow-right"
                >
                  <svg
                    data-icon="arrow-right"
                    height="12"
                    viewBox="0 0 16 16"
                    width="12"
                  >
                    <desc>
                      arrow-right
                    </desc>
                    <path
                      d="M14.7 7.29l-5-5a.965.965 0 00-.71-.3 1.003 1.003 0 00-.71 1.71l3.29 3.29H1.99c-.55 0-1 .45-1 1s.45 1 1 1h9.59l-3.29 3.29a1.003 1.003 0 001.42 1.42l5-5c.18-.18.29-.43.29-.71s-.12-.52-.3-.7z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-baseline"
            >
              <p
                class="StyledProps--font StyledProps--main"
              >
                Show
              </p>
              <div
                class="bp3-popover-wrapper DropDown--main Pagination--pageSizeDropdown"
              >
                <div
                  class="bp3-popover-target"
                >
                  <div
                    class=""
                  >
                    <div
                      class="Layout--horizontal StyledProps--main DropDown--dropdownButton DropDown--withBorder StyledProps--flex"
                      data-testid="dropdown-button"
                      style="width: 60px;"
                    >
                      <div
                        class="Layout--horizontal StyledProps--main DropDown--labelWrapper StyledProps--flex"
                      >
                        <p
                          class="StyledProps--font Text--lineclamp StyledProps--main DropDown--label"
                          data-testid="dropdown-value"
                          style="--text-line-clamp: 1;"
                        >
                          20
                        </p>
                      </div>
                      <div
                        class="Layout--horizontal StyledProps--main DropDown--btnWrapper StyledProps--flex"
                      >
                        <span
                          class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
                          data-icon="main-chevron-down"
                        >
                          <svg
                            height="8"
                            viewBox="0 0 14 8"
                            width="8"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M13 0c-.3 0-.5.1-.7.3L7 5.6 1.7.3C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7l6 6c.2.2.4.3.7.3s.5-.1.7-.3l6-6c.2-.2.3-.4.3-.7 0-.6-.4-1-1-1z"
                              fill="#4d5969"
                            />
                          </svg>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <p
                class="StyledProps--font StyledProps--main"
              >
                per page
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<DiscoveryServices /> tests should render error view correctly 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
  >
    <div
      class="StyledProps--font StyledProps--main PageBody--pageBody"
      data-name="page-body"
      data-testid="page-body"
    >
      <div
        class="StyledProps--font StyledProps--main tableBody"
      >
        <div
          class="TableV2--table"
        >
          <div
            class="TableV2--header"
            role="row"
          >
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 20%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                common.serviceName
              </p>
            </div>
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 20%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                common.namespace
              </p>
            </div>
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 20%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                discovery.networkDetails
              </p>
            </div>
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 30%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                discovery.relatedService
              </p>
            </div>
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 150px;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                
              </p>
            </div>
          </div>
          <div
            class="TableV2--body"
          />
          <div
            class="Layout--horizontal StyledProps--main TableV2--pagination Pagination--container StyledProps--padding-top-medium StyledProps--padding-bottom-medium StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-distribution-space-between"
          >
            <span
              class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--font-variation-small-semi"
            >
              0
               of 
              0
            </span>
            <div
              class="Layout--horizontal StyledProps--main"
            >
              <button
                aria-label="Prev"
                class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Pagination--roundedButton Pagination--buttonLeft Button--with-current-color Button--withLeftIcon Button--size Button--small"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-arrow-left StyledProps--main StyledProps--padding-right-xsmall"
                  icon="arrow-left"
                >
                  <svg
                    data-icon="arrow-left"
                    height="12"
                    viewBox="0 0 16 16"
                    width="12"
                  >
                    <desc>
                      arrow-left
                    </desc>
                    <path
                      d="M13.99 6.99H4.41L7.7 3.7a1.003 1.003 0 00-1.42-1.42l-5 5a1.014 1.014 0 000 1.42l5 5a1.003 1.003 0 001.42-1.42L4.41 8.99H14c.55 0 1-.45 1-1s-.46-1-1.01-1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="bp3-button-text"
                >
                  Prev
                </span>
              </button>
              <button
                class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Pagination--roundedButton Pagination--selected Button--with-current-color"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  1
                </span>
              </button>
              <button
                aria-label="Next"
                class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Pagination--roundedButton Pagination--buttonRight Button--with-current-color Button--withRightIcon Button--size Button--small"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  Next
                </span>
                <span
                  class="bp3-icon bp3-icon-arrow-right StyledProps--main"
                  icon="arrow-right"
                >
                  <svg
                    data-icon="arrow-right"
                    height="12"
                    viewBox="0 0 16 16"
                    width="12"
                  >
                    <desc>
                      arrow-right
                    </desc>
                    <path
                      d="M14.7 7.29l-5-5a.965.965 0 00-.71-.3 1.003 1.003 0 00-.71 1.71l3.29 3.29H1.99c-.55 0-1 .45-1 1s.45 1 1 1h9.59l-3.29 3.29a1.003 1.003 0 001.42 1.42l5-5c.18-.18.29-.43.29-.71s-.12-.52-.3-.7z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-baseline"
            >
              <p
                class="StyledProps--font StyledProps--main"
              >
                Show
              </p>
              <div
                class="bp3-popover-wrapper DropDown--main Pagination--pageSizeDropdown"
              >
                <div
                  class="bp3-popover-target"
                >
                  <div
                    class=""
                  >
                    <div
                      class="Layout--horizontal StyledProps--main DropDown--dropdownButton DropDown--withBorder StyledProps--flex"
                      data-testid="dropdown-button"
                      style="width: 60px;"
                    >
                      <div
                        class="Layout--horizontal StyledProps--main DropDown--labelWrapper StyledProps--flex"
                      >
                        <p
                          class="StyledProps--font Text--lineclamp StyledProps--main DropDown--label"
                          data-testid="dropdown-value"
                          style="--text-line-clamp: 1;"
                        >
                          20
                        </p>
                      </div>
                      <div
                        class="Layout--horizontal StyledProps--main DropDown--btnWrapper StyledProps--flex"
                      >
                        <span
                          class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
                          data-icon="main-chevron-down"
                        >
                          <svg
                            height="8"
                            viewBox="0 0 14 8"
                            width="8"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M13 0c-.3 0-.5.1-.7.3L7 5.6 1.7.3C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7l6 6c.2.2.4.3.7.3s.5-.1.7-.3l6-6c.2-.2.3-.4.3-.7 0-.6-.4-1-1-1z"
                              fill="#4d5969"
                            />
                          </svg>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <p
                class="StyledProps--font StyledProps--main"
              >
                per page
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<DiscoveryServices /> tests should render loading view correctly 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
  >
    <div
      class="StyledProps--font StyledProps--main PageBody--pageBody"
      data-name="page-body"
      data-testid="page-body"
    >
      <div
        class="StyledProps--font StyledProps--main PageSpinner--spinner StyledProps--flex StyledProps--flex-align-center-center"
        data-testid="page-spinner"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-medium StyledProps--main PageSpinner--content"
          style="align-items: center; width: 500px;"
        >
          <span
            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey600"
            data-icon="steps-spinner"
          >
            <svg
              height="32"
              viewBox="0 0 128 128"
              width="32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g>
                <path
                  d="M122.5 69.25H96.47a33.1 33.1 0 000-10.5h26.05a5.25 5.25 0 010 10.5z"
                  fill="#ff8e02"
                />
                <path
                  d="M112.04 97.83L89.47 84.8a33.1 33.1 0 005.25-9.1l22.57 13.03a5.25 5.25 0 01-5.28 9.1zM88.68 117.35L75.65 94.78a33.1 33.1 0 009.1-5.25l13.02 22.57a5.25 5.25 0 11-9.1 5.25zM58.7 122.57V96.5a33.1 33.1 0 0010.5 0v26.07a5.25 5.25 0 01-10.5 0zM30.1 112.1l13.04-22.57a33.1 33.1 0 009.1 5.25L39.2 117.35a5.25 5.25 0 11-9.1-5.25zM10.6 88.74L33.16 75.7a33.1 33.1 0 005.25 9.1L15.88 97.83a5.25 5.25 0 11-5.25-9.1z"
                  fill="#ffddb3"
                  fill-opacity="0.3"
                />
                <path
                  d="M5.37 58.75h26.06a33.1 33.1 0 000 10.5H5.37a5.25 5.25 0 010-10.5z"
                  fill="#ffd29a"
                  fill-opacity="0.4"
                />
                <path
                  d="M15.85 30.17L38.4 43.2a33.1 33.1 0 00-5.24 9.1L10.6 39.25a5.25 5.25 0 115.25-9.1z"
                  fill="#ffc680"
                  fill-opacity="0.5"
                />
                <path
                  d="M39.2 10.65l13.03 22.57a33.1 33.1 0 00-9.1 5.25l-13-22.57a5.25 5.25 0 119.1-5.25z"
                  fill="#ffbb67"
                  fill-opacity="0.6"
                />
                <path
                  d="M69.2 5.43V31.5a33.1 33.1 0 00-10.5 0V5.42a5.25 5.25 0 1110.5 0z"
                  fill="#ffb04d"
                  fill-opacity="0.7"
                />
                <path
                  d="M97.77 15.9L84.75 38.47a33.1 33.1 0 00-9.1-5.25l13.03-22.57a5.25 5.25 0 119.1 5.25z"
                  fill="#ffa535"
                  fill-opacity="0.8"
                />
                <path
                  d="M117.3 39.26L94.7 52.3a33.1 33.1 0 00-5.25-9.1l22.57-13.03a5.25 5.25 0 015.25 9.1z"
                  fill="#ff991b"
                  fill-opacity="0.9"
                />
                <animatetransform
                  attributeName="transform"
                  calcMode="discrete"
                  dur="1200ms"
                  repeatCount="indefinite"
                  type="rotate"
                  values="0 64 64;30 64 64;60 64 64;90 64 64;120 64 64;150 64 64;180 64 64;210 64 64;240 64 64;270 64 64;300 64 64;330 64 64"
                />
              </g>
            </svg>
          </span>
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-align-center StyledProps--color StyledProps--color-grey600"
          >
            discovery.discoveringSpinnerMessage
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
